# ivi-main-loop

./: CMakeLists.txt  LICENSE  README.md  ivi-main-loop-config.h.in  ivi-main-loop.pc.in
doc/: CMakeLists.txt  doxygen.cfg.in  page-design.h  page-examples.h
examples/: CMakeLists.txt
examples/application/: CMakeLists.txt  exampleApplicationCore.cpp
examples/basic/: CMakeLists.txt  exampleMainLoop.cpp
examples/basic_optimized/: CMakeLists.txt  exampleMainLoop.cpp
examples/c-application/: CMakeLists.txt  exampleMainLoop.c
examples/c-library/: c-library.h
examples/cpp-application/: exampleMainLoop.cpp
examples/cpp-application-unix-signal/: CMakeLists.txt  exampleMainLoopUnixSignal.cpp
examples/deprecated/: exampleMainLoop.cpp
examples/glib/: CMakeLists.txt  exampleGLibApp.cpp  exampleLibrary.h
include/: CMakeLists.txt  ivi-main-loop-c-types.h  ivi-main-loop-c.h  ivi-main-loop-common.h  ivi-main-loop-log.h  ivi-main-loop.h
include/glib/: ivi-main-loop-glib.h
include/ivi-main-loop/: UNIXSignalHandler.h  ivi-main-loop-app.h  ivi-main-loop-c-types.h  ivi-main-loop-common.h  ivi-main-loop-unix-signal.h  ivi-main-loop.h
include/ivi-main-loop/glib/: ivi-main-loop-glib.h
src/: CMakeLists.txt  UNIXSignalHandler.cpp  ivi-main-loop-log.h  ivi-main-loop-private.h  ivi-main-loop.cpp
src/glib/: CMakeLists.txt  ivi-main-loop-glib.cpp
